[project]
name = "bdsaglam-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "itables>=2.2.4",
    "jupyter>=1.1.1",
    "openai>=1.63.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
]
