[project]
name = "continual-learning-course"
version = "0.1.0"
description = "Continual Learning — memory, fast weights, and learning at many timescales."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "jupyter>=1.1",
]
